--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,66 @@
-requests~=2.31.0
-structlog~=24.1.0
-curlify~=2.2.1
-pydantic~=2.6.1
-records~=0.5.3
-sqlalchemy~=1.4.46
-pytest~=8.0.2
+allure-pytest==2.13.3
+allure-python-commons==2.13.3
+annotated-types==0.6.0
+attrs==23.2.0
+betterproto==2.0.0b6
+black==24.3.0
+certifi==2024.2.2
+charset-normalizer==3.3.2
+click==8.1.7
+colorama==0.4.6
+curlify==2.2.1
+db-client @ git+https://github.com/AndreiDudin/db_client.git@612608f350f9ee772bef8234a49177d288dfe480
+distconfig3==1.0.1
+dm-api-account @ file:///C:/Users/user/PycharmProjects/openapi-templates/dm_api_account
+docopt==0.6.2
+et-xmlfile==1.1.0
+exceptiongroup==1.2.0
+greenlet==3.0.3
+grpcio==1.62.1
+grpcio-tools==1.62.1
+grpclib==0.4.7
+h2==4.1.0
+hpack==4.0.0
+hyperframe==6.0.1
+idna==3.6
+inflect==7.0.0
+iniconfig==2.0.0
+isort==5.13.2
+jdcal==1.4.1
+Jinja2==3.1.3
+MarkupSafe==2.1.5
+multidict==6.0.5
+mypy-extensions==1.0.0
+mypy-protobuf==3.5.0
+openpyxl==2.4.11
+orm-client @ git+https://github.com/AndreiDudin/orm_client.git@913c3ffcac3e291ed290cf377620250585ba9cb6
+packaging==24.0
+pathspec==0.12.1
+platformdirs==4.2.0
+pluggy==1.4.0
+protobuf==4.25.3
+psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pydantic==2.6.3
+pydantic_core==2.16.3
+PyHamcrest==2.1.0
+pytest==8.0.2
+pytest-asyncio==0.23.6
+python-dateutil==2.9.0.post0
+PyYAML==6.0.1
+records==0.5.3
+requests==2.31.0
+restclient @ file:///C:/Users/user/PycharmProjects/restclient/dist/restclient-0.0.1.tar.gz
+six==1.16.0
+sqlacodegen==2.3.0.post1
+SQLAlchemy==1.4.46
+stringcase==1.2.0
+structlog==24.1.0
+tablib==3.5.0
+toml==0.10.2
+tomli==2.0.1
+types-protobuf==4.24.0.20240311
+typing_extensions==4.11.0rc1
+urllib3==2.2.1
+vyper-config==1.2.1
+watchdog==4.0.0
